Added grid-currents to installer-status response
