# src/swagger/swagger.json
@@ -165,6 +165,9 @@
 				},
 				"installationUsage": {
 					"$ref": "#/definitions/InstallationUsage"
+				},
+				"gridCurrents": {
+					"$ref": "#/definitions/GridCurrents"
 				}
 			},
 			"required": [
@@ -173,7 +176,8 @@
 				"loadSheddingModule",
 				"chargeStationMaxCurrent",
 				"onOffPeak",
-				"installationUsage"
+				"installationUsage",
+				"gridCurrents"
 			],
 			"type": "object",
 			"additionalProperties": false
